        * Add server option 'rebalance_ignore_missing' in mogilefsd config
          that allows the rebalance to ignore files that are already missing
          when it tries to delete them.

        * Fix MultipleHosts replication policy to no longer return desperate
          devices after no longer being desperate, instead returning a state
          which will queue for retries in the future till it can be truely
          happy. This prevents files from being replicated to all writable
          devs when there are two few writable hosts to satisfy the policy.

        * Add --chmod-mountpoints option to mogautomount, in an attempt to
          prevent mogstored machines from accidentally writing to their under-
          lying filesystem.

        * New optional argument 'startpos' to fsck_reset.

        * Use correct per-Store port, defaulting to UNIX sockets on localhost.

        * add --dbport option to mogdbsetup (Ask Bjoern Hansen)

        * Fix state_change() bug that could make file_to_delete_later
          grow unnecessarily (Radu Greab)

        * Add Mogstored::HTTPServer::None to allow using mogstored
          with unmanaged backend DAV servers.

        * Add experimental cmd_edit_file. Client requires DAV MOVE and
          partial PUT on the store to use it.

        * make mogstored and mogilefsd use the now-bundled dependency
          Perl modules as a last resort, unless MOGILE_NO_BUILTIN_DEPS
          environment variable is true.  this makes it easier for people
          to use mogilefs, without dependency hell.  distros/packagers
          are expected to ignore (or scoff at) this "feature".  but
          easier for people working from tarball/svn releases.  bundled
          dependencies will be updated over time, as needed.

        * Bring the SQLite store up to date

        * Increase the timeouts in the test suite

        * In the test suite, also search for mogadm in /usr/local/bin/ and